--- a/login.html
+++ b/login.html
@@ -22,21 +22,28 @@
 </head>
 
 <body>
-  <main class="mt-5">
-    <div class="login">
-      <img src="img/login2.png" alt="">
-      <form action="" id="formulario">
-       <h4>Iniciar sesión</h4>
-          <div id="formulario__Aviso_user">↓ Falta rellenar ↓</div>
-          <div id="formulario__Aviso_pass">↓ Falta rellenar ↓</div>
-          <div class="formulario__contUser contTex"><input type="text" id="formulario__usuario"  placeholder="Nombre de Usuario"></div>
-          <div class="formulario__contPass contTex"><input type="password" id="formulario__contraseña"  placeholder="Contraseña">
-          <div class="d-flex aling-items-center z-3" id="ojo"></div></div>
-          <input type="submit" class="formulario__boton"> 
-      </form>
+    <main class="mt-5">
+      <div class="login">
+        <img id="imageninicio" src="img/login2.png" alt="">
+        <div id="cuadro"><h3>Iniciar Sesión</h3>
+        <form action="" id="formulario">
+            <div id="formulario__Aviso_user">Por favor ingrese su usuario</div>
+            <div class="formulario__contUser contTex"><input type="text" id="formulario__usuario"  placeholder="Usuario"></div>
+            <div id="formulario__Aviso_pass">Por favor ingrese su contraseña</div>
+            <div class="formulario__contPass contTex"><input type="password" id="formulario__contraseña"  placeholder="Contraseña">
+            <div><input type="checkbox" id="ver-password"><label for="ver-password">Ver Contraseña</label></div><br>
+            <input type="submit" class="formulario__boton"> 
+            
+        </form>
+        </div>
+        </div>
+        <br> <br>
+        <form action="">
+          <p>¿NECESITAS UNA CUENTA?</p>
+          <button type="button">Registrate</button>
+        </form>
       </div>
-    </div>
-  </main>
+    </main>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
