--- a/login.html
+++ b/login.html
@@ -27,9 +27,9 @@
         <img id="imageninicio" src="img/login2.png" alt="">
         <div id="cuadro"><h3>Iniciar Sesión</h3>
         <form action="" id="formulario">
-            <div id="formulario__Aviso_user">Por favor ingrese su usuario</div>
+            <div id="formulario__Aviso_user" style="opacity: 0;">Por favor ingrese su usuario</div>
             <div class="formulario__contUser contTex"><input type="text" id="formulario__usuario"  placeholder="Usuario"></div>
-            <div id="formulario__Aviso_pass">Por favor ingrese su contraseña</div>
+            <div id="formulario__Aviso_pass" style="opacity: 0;">Por favor ingrese su contraseña</div>
             <div class="formulario__contPass contTex"><input type="password" id="formulario__contraseña"  placeholder="Contraseña">
             <div><input type="checkbox" id="ver-password"><label for="ver-password">Ver Contraseña</label></div><br>
             <input type="submit" class="formulario__boton"> 
