--- a/login.html
+++ b/login.html
@@ -30,7 +30,8 @@
             <div id="formulario__Aviso_user" style="opacity: 0;">Por favor ingrese su usuario</div>
             <div class="formulario__contUser contTex"><input type="text" id="formulario__usuario"  placeholder="Usuario"></div>
             <div id="formulario__Aviso_pass" style="opacity: 0;">Por favor ingrese su contraseña</div>
-            <div class="formulario__contPass contTex"><input type="password" id="formulario__contraseña"  placeholder="Contraseña">
+            <div class="formulario__contPass contTex">  
+            <input type="password" id="formulario__contraseña"  placeholder="Contraseña"></div>
             <div><input type="checkbox" id="ver-password"><label for="ver-password">Ver Contraseña</label></div><br>
             <input type="submit" class="formulario__boton"> 
             
